調整免運的間距

--- a/z-trip/shoppingcar/index.html
+++ b/z-trip/shoppingcar/index.html
@@ -463,7 +463,8 @@
     </section>
 
     <div class="contents_box total_amount for_mob_total clearfix">
-        <p class="discount">滿額600 免運&nbsp;&nbsp;已折扣 $ 1,380</p> <!-- 看這些折扣資訊是要併成一行?，還是? -->
+        <p class="discount free">滿額 600 免運</p>
+        <p class="discount">運費 0 元&nbsp;&nbsp;已折扣 $ 1,380</p> <!-- 看這些折扣資訊是要併成一行?，還是? -->
         <p class="all">結帳金額 <span>$ 17,420</span></p>
         <p class="bt_btn"><a class="btn_org btn_red no_function" href="#">確認送出</a></p>
     </div>
