--- a/ishop-booking-maya-fe/landing.html
+++ b/ishop-booking-maya-fe/landing.html
@@ -29,12 +29,12 @@
   <link rel="stylesheet" href="https://bootswatch.com/3/flatly/bootstrap.min.css">
   <link rel='stylesheet' href='https://wifiotg-kay.iiot.io/styles/formio.full.min.css'>
   <!-- custom css -->
-  
+
   <!-- temp for button -->
-  <link rel='stylesheet' href='https://www.gowifi.com.tw/assets/css/blocks.css'> 
-  
+  <link rel='stylesheet' href='https://www.gowifi.com.tw/assets/css/blocks.css'>
+
   <script src='https://wifiotg-kay.iiot.io/scripts/formio.full.min.js'></script>
-  <script src="/assets/ishop.js"></script>
+  <script src="assets/ishop.js"></script>
   <!-- moment -->
 <link rel='stylesheet' href='./assets/landing-style.css'>
 <!-- <link rel='stylesheet' href='https://wifiotg-kay.iiot.io/styles/landing-style.css'> -->
@@ -110,12 +110,13 @@
     }
 
     .mask {
+      width: 100%;
       background-size: 150px;
-      background:
-        -moz-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 40%, rgba(100, 100, 100, 0.6) 50%, rgba(100, 100, 100, 1) 50%);
-      background:
-        -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 40%, rgba(100, 100, 100, 0.6) 50%, rgba(100, 100, 100, 1) 50%);
-      background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 40%, rgba(100, 100, 100, 0.6) 50%, rgba(100, 100, 100, 1) 100%);
+      background:-moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.2) 40%, rgba(0, 0, 0, 0.6) 50%, rgba(0, 0, 0, 0.5) 50%);
+      background:-webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.2) 40%, rgba(0, 0, 0, 0.6) 50%, rgba(0, 0, 0, .5) 50%);
+      background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.2) 40%, rgba(0, 0, 0, 0.6) 50%, rgba(0, 0, 0, .5) 100%);
+      position: absolute; left: 0; bottom: 0;
+      padding: 100px 15px 15px 15px !important;
     }
 
     .carousel-inner .item:after {
@@ -341,12 +342,12 @@
   <!-- 熱門商品 Content Part -->
   <div align="center">
     <div style="padding:20px 20px 0px 20px">
-      <div style="font-size:30px; border:solid;border-width:0px 0px 2px;border-color:#797979;">
+      <div class="main-title">
         <h1 style="font-family:Microsoft JhengHei;">WiFi網路分享器租借</h1>
       </div>
     </div>
     <div align="left" class="container">
-      
+
             <div class="iiot-landing-form" id="ishop-lid-W3PmxR7Y">
               <div class="row">
                 <div class="col-md-12">
@@ -354,7 +355,7 @@
                 </div>
               </div>
             </div>
-          
+
     </div>
     <!--/end container-->
   </div>
@@ -362,7 +363,7 @@
 
 
   <!-- Content Part  style="font-family:Microsoft JhengHei;" -->
-  <div align="center">
+  <div align="center" class="booking-advantage">
     <div class="container" style="margin:20px 10px; border-radius:20px; background-color:rgba(255, 209, 209, 0.3)">
       <div class="row" style="padding:20px 10px 0px">
         <div style="padding:0px 20px">
