Update html + css

--- a/JH/about.html
+++ b/JH/about.html
@@ -87,7 +87,7 @@
             <h3 class="main_title">公司簡介 / <span>COMPANY INTRODUCTION</span></h3>
             <h4 class="sub_title">優良的木材製品，來自於持續追求製程品質的團隊”</h4>
             <p class="info">正豪木業自1993年成立迄今，以品質、創新、客戶為先的經營信念，努力耕耘實木門領域，擁有超過40年經歷的資深師傅做專業製造與嚴謹監督，多年來深獲國內外客戶的高度肯定。<br>
-                我們不斷的改良製作工法，以木門不只「美麗」更要「堪用」的堅定信念，提供環保永續林的高級樹種，選用安全認證塗料及木膠，更是100%台灣手工製造，絕非假他人代工，所有品質由我們嚴格控管。<br>
+                我們不斷的改良製作工法，以木門不只「美麗」更要「耐用」的堅定信念，提供環保永續林的高級樹種，選用安全認證塗料及木膠，更是100%台灣手工製造，絕非假他人代工，所有品質由我們嚴格控管。<br>
                 <br>本公司使用與日本技術合作之漆面塗料，並擁有多種自行研發之特殊漆面，提供客戶更多樣化的選擇。我們採用通過日本食品衛生無毒證明，不含甲醛(福馬林)、重金屬等毒物之膠著劑，在2012年因對於品質的堅持與正豪全體員工努力下，取得臺灣製MIT微笑標章驗證，並於2018年獲得MIT台灣金選肯定。<br>
                 <br>做最優良的木材製品與最貼心的銷售服務，來回饋給支持正豪木業實木產品的您，是正豪一直以來的堅持。</p>
             <div class="photo">
@@ -119,7 +119,7 @@
                     </div>
                 </li>
             </ul>
-        </div>
+        </div><a name="goabout_04"></a>
     </section>
     <section class="ContentsBox line_dotted">
         <div class="aboutus_box" id="inside_goto_03">
@@ -209,7 +209,7 @@
                     星羅棋布的目節呈現其原始美感，搭配原⽊⾊漆⾯俱⽇式鄉村⾵格。</p>
                 </li>
             </ul>
-        </div>
+        </div><a name="goabout_02"></a>
     </section>
     <section class="ContentsBox line_dotted">
         <div class="aboutus_box" id="inside_goto_04">
@@ -228,7 +228,7 @@
             </p>
         </div>
     </section>
-    <section class="ContentsBox line_dotted">
+    <section class="ContentsBox line_dotted"><a name="goabout_03"></a>
         <div class="aboutus_box" id="inside_goto_05">
             <h3 class="main_title">特色漆面 / <span>FEATURES PAINT</span></h3>
             <div class="photo">
@@ -244,7 +244,7 @@
             </p>
         </div>
     </section>
-    <section class="ContentsBox">
+    <section class="ContentsBox"><a name="goabout_01"></a>
         <div class="aboutus_box" id="inside_goto_06">
             <h3 class="main_title">獨門工法 / <span>EXCLUSIVE TECHNOLOGY</span></h3>
             <div class="photo">
@@ -259,27 +259,24 @@
 </main>
 
 <footer class="FooterBox">
-    <div class="ContentsBox">
+    <section class="ContentsBox">
         <ul class="info clearfix">
             <li class="icon_01">
                 <p>_連絡電話_<br><span>(03)9906828</span></p>
             </li>
             <li class="icon_02">
-                <p><a href="#" target="_blank">_臉書專頁_<br><span>JENG HAUR</span>正豪木業</a></p>
+                <a href="https://www.facebook.com/pages/category/Community/%E6%AD%A3%E8%B1%AA%E6%9C%A8%E6%A5%AD%E8%82%A1%E4%BB%BD%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8-209694019094602/" target="_blank"><p>_臉書專頁_<br><span>JENG HAUR</span>正豪木業</p></a>
             </li>
             <li class="icon_03">
-                <p>_公司地址_<br>宜蘭縣冬山鄉德興四路<span>16</span>號</p>
+                 <a href="https://goo.gl/maps/EWWfJ6YaxKq" target="_blank"><p>_公司地址_<br>宜蘭縣冬山鄉德興四路<span>16</span>號</p></a>
             </li>
             <li class="icon_04">
-                <p>_電子郵件_<br><a href="mailto:jeng9906828@gmail.com"><span>jeng9906828@gmail.com</span></a></p>
+                <a href="mailto:jeng9906828@gmail.com"><p>_電子郵件_<br><span>jeng9906828@gmail.com</span></p></a>
             </li>
         </ul>
-        <p class="copyright">Copyright © 2019 Jeng Haur Timber Corporation. All right reserved</p>
-    </div>
-    <section class="gotop">
-        <p><a class="go00">TOP</a></p>
     </section>
 </footer>
+<p class="go-top" id="TOP" title="回到上面"><a>TOP</a></p>
 
 </body>
 </html>
