--- a/JH/order.html
+++ b/JH/order.html
@@ -74,11 +74,10 @@
         <div class="the_order_box">
             <h3 class="main_title">訂購流程 / <span>ORDER PROCESS</span></h3>
             <div class="photo world_map">
-                <img src="images/order/img_step.png">
+                <div class="max80"><img src="images/order/img_step.png"></div>
             </div>
             <h3 class="main_title">詢價或訂購木門所需資訊</h3>
             <div class="order_type clearfix">
-                <h4 class="icon_01">挑選</h4>
                 <ul class="clearfix">
                     <li>
                         <div class="top">
@@ -94,7 +93,7 @@
                     <li>
                         <div class="top">
                             <p><span>2</span><br>
-                            提供門板尺寸</p>
+                            提供門板尺寸及數量</p>
                         </div>
                         <img src="images/order/order_type_img_02.png">
                         <div class="bottom">
@@ -105,59 +104,31 @@
                 </ul>
             </div>
             <div class="order_type clearfix">
-                <h4 class="icon_02">EMAIL詢價或訂購<br>
-                    <span>E-mail : <a href="mailto:jeng9906828@gmail.com">jeng9906828@gmail.com</a></span></h4>
-                <ul class="clearfix">
-                    <li>
-                        <div class="top skype_blue">
-                            <p><span>1</span><br>
-                            聯絡方式</p>
-                        </div>
-                        <div class="bottom">
-                            <p>聯絡人姓名<br>
-                            聯絡人電話</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="top skype_blue">
-                            <p><span>2</span><br>
-                            聯絡方式</p>
-                        </div>
-                        <div class="bottom">
-                            <p>
-                                型號: R02-02-懷舊綠<br>
-                                尺寸: 寬895*高2050*厚33<span>(單位mm)</span><br>
-                                數量: 2片</p>
-                        </div>
-                    </li>
-                </ul>
+                <h4 class="icon_02"><a href="contact.html">前往 詢價或訂購</a></h4>
             </div>
         </div>
     </section>
 </main>
 
 <footer class="FooterBox">
-    <div class="ContentsBox">
+    <section class="ContentsBox">
         <ul class="info clearfix">
             <li class="icon_01">
                 <p>_連絡電話_<br><span>(03)9906828</span></p>
             </li>
             <li class="icon_02">
-                <p><a href="#" target="_blank">_臉書專頁_<br><span>JENG HAUR</span>正豪木業</a></p>
+                <a href="https://www.facebook.com/pages/category/Community/%E6%AD%A3%E8%B1%AA%E6%9C%A8%E6%A5%AD%E8%82%A1%E4%BB%BD%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8-209694019094602/" target="_blank"><p>_臉書專頁_<br><span>JENG HAUR</span>正豪木業</p></a>
             </li>
             <li class="icon_03">
-                <p>_公司地址_<br>宜蘭縣冬山鄉德興四路<span>16</span>號</p>
+                 <a href="https://goo.gl/maps/EWWfJ6YaxKq" target="_blank"><p>_公司地址_<br>宜蘭縣冬山鄉德興四路<span>16</span>號</p></a>
             </li>
             <li class="icon_04">
-                <p>_電子郵件_<br><a href="mailto:jeng9906828@gmail.com"><span>jeng9906828@gmail.com</span></a></p>
+                <a href="mailto:jeng9906828@gmail.com"><p>_電子郵件_<br><span>jeng9906828@gmail.com</span></p></a>
             </li>
         </ul>
-        <p class="copyright">Copyright © 2019 Jeng Haur Timber Corporation. All right reserved</p>
-    </div>
-    <section class="gotop">
-        <p><a class="go00">TOP</a></p>
     </section>
 </footer>
+<p class="go-top" id="TOP" title="回到上面"><a>TOP</a></p>
 
 </body>
 </html>
