--- a/JH/product-01.html
+++ b/JH/product-01.html
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="zh-TW">
 <head>
 <meta charset="UTF-8">
-<title>正豪木業 - 產品介紹 - 細緻沉穩風</title>
-<meta name='description' content=""/>
+<title>正細緻沉穩風∣JH正豪手工房間門/推拉門</title>
+<meta name='description' content="木頭細緻天然紋理，搭配沉穩霧面質感漆面，讓房間門襯托出法式獨有的知性慵懶家居氛圍。歡迎立即參觀選購!"/>
 <meta name='keywords' content=""/>
 <meta name="MobileOptimized" content="width">
 <meta name="HandheldFriendly" content="true">
@@ -94,7 +94,7 @@ $(document).ready(function() {
                         <h5 class="has_sub"><span>房間門/推拉門</span></h5>
                         <ul class="the_sub_menu" style="display: block;">
                             <li><p><a class="btn_in" href="product-01.html">細緻沉穩風</a></p></li>
-                            <li><p><a href="product-02.html">恬靜鄉村風</a></p></li>
+                            <li><p><a href="product-02.html">田園鄉村風</a></p></li>
                             <li><p><a href="product-03.html">雋永經典風</a></p></li>
                             <li><p><a href="product-04.html">英式田園風</a></p></li>
                             <li><p><a href="product-05.html">匠心懷舊風</a></p></li>
@@ -170,51 +170,48 @@ $(document).ready(function() {
             </div>
             <ul class="clearfix">
                 <li>
-                    <div class="top_icon icon_01">
+                    <a class="top_icon icon_01" href="about.html#goabout_01">
                         <p>獨門工法</p>
-                    </div>
+                    </a>
                 </li>
                 <li>
-                    <div class="top_icon icon_02">
+                    <a class="top_icon icon_02" href="order.html">
                         <p>訂購流程</p>
-                    </div>
+                    </a>
                 </li>
                 <li>
-                    <div class="top_icon icon_03">
+                    <a class="top_icon icon_03" href="faq.html">
                         <p>保養常識</p>
-                    </div>
+                    </a>
                 </li>
                 <li>
-                    <div class="top_icon icon_04">
+                    <a class="top_icon icon_04" href="about.html#goabout_02">
                         <p>檢驗合格</p>
-                    </div>
+                    </a>
                 </li>
             </ul>
         </div>
     </section>
 </main>
 <footer class="FooterBox">
-    <div class="ContentsBox">
+    <section class="ContentsBox">
         <ul class="info clearfix">
             <li class="icon_01">
                 <p>_連絡電話_<br><span>(03)9906828</span></p>
             </li>
             <li class="icon_02">
-                <p><a href="#" target="_blank">_臉書專頁_<br><span>JENG HAUR</span>正豪木業</a></p>
+                <a href="https://www.facebook.com/pages/category/Community/%E6%AD%A3%E8%B1%AA%E6%9C%A8%E6%A5%AD%E8%82%A1%E4%BB%BD%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8-209694019094602/" target="_blank"><p>_臉書專頁_<br><span>JENG HAUR</span>正豪木業</p></a>
             </li>
             <li class="icon_03">
-                <p>_公司地址_<br>宜蘭縣冬山鄉德興四路<span>16</span>號</p>
+                 <a href="https://goo.gl/maps/EWWfJ6YaxKq" target="_blank"><p>_公司地址_<br>宜蘭縣冬山鄉德興四路<span>16</span>號</p></a>
             </li>
             <li class="icon_04">
-                <p>_電子郵件_<br><a href="mailto:jeng9906828@gmail.com"><span>jeng9906828@gmail.com</span></a></p>
+                <a href="mailto:jeng9906828@gmail.com"><p>_電子郵件_<br><span>jeng9906828@gmail.com</span></p></a>
             </li>
         </ul>
-        <p class="copyright">Copyright © 2019 Jeng Haur Timber Corporation. All right reserved</p>
-    </div>
-    <section class="gotop">
-        <p><a class="go00">TOP</a></p>
     </section>
 </footer>
+<p class="go-top" id="TOP" title="回到上面"><a>TOP</a></p>
 
     <!-- popup product-info - 1 -->
     <div id="popup-product-1" class="white-popup popup-L mfp-hide">
@@ -223,16 +220,16 @@ $(document).ready(function() {
                 <img src="images/product/p01/1-R21-12.jpg" alt="21-12-知性灰藍色">
             </div>
             <div class="the_deta">
-                <h3 class="top_title">品名:實木房間門/工業穀倉風</h3>
+                <h3 class="top_title">品名:實木房間門/細緻沉穩風</h3>
                 <p class="p_center">
                     型號：R21-12-知性藍色<br>
-                    樹種：歐洲雲杉<br>
-                    厚度：33mm/36mm/40mm/45mm<br>
+                    樹種：柳安木(美蘭地)<br>
+                    厚度：33mm<br>
                     工法：複合實木工法<br>
                 </p>
                 <h3 class="top_title">門板特色：</h3>
                 <p>
-                    ◆ 獨門的手工漆面，以及精心處理樹幹表層的粗獷觸感，讓木門保留原始紋路的同時卻不會劃傷您的手。簡易搭配黑色的穀倉門懸掛五金，輕鬆展現專屬您的粗曠工業風格<br>
+                    ◆ 柳安木(美蘭地)柳安為兩百多樹種之統稱，我們選用柳安之最『美蘭地』，其毛細孔如雨絲般細緻，帶有神秘感，搭配消光霧面漆，著色後展現法式知性魅力。<br>
                     ◆ 門板尺寸全採客製化服務<br>
                     ◆ 100% 台灣純手工製造，絕非假他人代工，品質由我們嚴格控管<br>
                     ◆ 經數道手工研磨讓木門邊角圓潤不傷手<br>
@@ -264,11 +261,11 @@ $(document).ready(function() {
                 <img src="images/product/p01/2-R21-12.jpg" alt="R21-12-知性藍色">
             </div>
             <div class="the_deta">
-                <h3 class="top_title">品名:實木房間門/工業穀倉風</h3>
+                <h3 class="top_title">品名:實木房間門/細緻沉穩風</h3>
                 <p class="p_center">
                     型號：R21-12-知性灰藍色<br>
                     樹種：柳安木(美蘭地)<br>
-                    厚度：33mm/36mm/40mm/45mm<br>
+                    厚度：33mm<br>
                     工法：複合實木工法<br>
                 </p>
                 <h3 class="top_title">門板特色：</h3>
@@ -302,11 +299,11 @@ $(document).ready(function() {
                 <img src="images/product/p01/3-R21-12.jpg" alt="R21-12-珍珠灰色">
             </div>
             <div class="the_deta">
-                <h3 class="top_title">品名:實木房間門/工業穀倉風</h3>
+                <h3 class="top_title">品名:實木房間門/細緻沉穩風</h3>
                 <p class="p_center">
                     型號：R21-12-珍珠灰色<br>
                     樹種：柳安木(美蘭地)<br>
-                    厚度：33mm/36mm/40mm/45mm<br>
+                    厚度：33mm<br>
                     工法：複合實木工法<br>
                 </p>
                 <h3 class="top_title">門板特色：</h3>
@@ -340,11 +337,11 @@ $(document).ready(function() {
                 <img src="images/product/p01/4-R21-12.jpg" alt="R21-12-鐵刀黑色">
             </div>
             <div class="the_deta">
-                <h3 class="top_title">品名:實木房間門/工業穀倉風</h3>
+                <h3 class="top_title">品名:實木房間門/細緻沉穩風</h3>
                 <p class="p_center">
                     型號：R21-12-鐵刀黑色<br>
                     樹種：柳安木(美蘭地)<br>
-                    厚度：33mm/36mm/40mm/45mm<br>
+                    厚度：33mm<br>
                     工法：複合實木工法<br>
                 </p>
                 <h3 class="top_title">門板特色：</h3>
@@ -378,11 +375,11 @@ $(document).ready(function() {
                 <img src="images/product/p01/5-R21-12.jpg" alt="R21-12-鐵灰色">
             </div>
             <div class="the_deta">
-                <h3 class="top_title">品名:實木房間門/工業穀倉風</h3>
+                <h3 class="top_title">品名:實木房間門/細緻沉穩風</h3>
                 <p class="p_center">
                     型號：R21-12-鐵灰色<br>
                     樹種：柳安木(美蘭地)<br>
-                    厚度：33mm/36mm/40mm/45mm<br>
+                    厚度：33mm<br>
                     工法：複合實木工法<br>
                 </p>
                 <h3 class="top_title">門板特色：</h3>
@@ -416,11 +413,11 @@ $(document).ready(function() {
                 <img src="images/product/p01/6-R20-12.jpg" alt="R20-12-珍珠灰色">
             </div>
             <div class="the_deta">
-                <h3 class="top_title">品名:實木房間門/工業穀倉風</h3>
+                <h3 class="top_title">品名:實木房間門/細緻沉穩風</h3>
                 <p class="p_center">
                     型號：R20-12-珍珠灰色<br>
                     樹種：柳安木(美蘭地)<br>
-                    厚度：33mm/36mm/40mm/45mm<br>
+                    厚度：33mm<br>
                     工法：複合實木工法<br>
                 </p>
                 <h3 class="top_title">門板特色：</h3>
@@ -454,11 +451,11 @@ $(document).ready(function() {
                 <img src="images/product/p01/7-R29-12.jpg" alt="R29-12-知性深紅色">
             </div>
             <div class="the_deta">
-                <h3 class="top_title">品名:實木房間門/工業穀倉風</h3>
+                <h3 class="top_title">品名:實木房間門/細緻沉穩風</h3>
                 <p class="p_center">
                     型號：R29-12-知性深紅色<br>
                     樹種：柳安木(美蘭地)<br>
-                    厚度：33mm/36mm/40mm/45mm<br>
+                    厚度：33mm<br>
                     工法：複合實木工法<br>
                 </p>
                 <h3 class="top_title">門板特色：</h3>
@@ -492,11 +489,11 @@ $(document).ready(function() {
                 <img src="images/product/p01/8-R29-12.jpg" alt="R29-12-鐵刀黑色">
             </div>
             <div class="the_deta">
-                <h3 class="top_title">品名:實木房間門/工業穀倉風</h3>
+                <h3 class="top_title">品名:實木房間門/細緻沉穩風</h3>
                 <p class="p_center">
                     型號：R29-12-鐵刀黑色<br>
                     樹種：柳安木(美蘭地)<br>
-                    厚度：33mm/36mm/40mm/45mm<br>
+                    厚度：33mm<br>
                     工法：複合實木工法<br>
                 </p>
                 <h3 class="top_title">門板特色：</h3>
