--- a/JH/product-08.html
+++ b/JH/product-08.html
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="zh-TW">
 <head>
 <meta charset="UTF-8">
-<title>正豪木業 - 產品介紹 - 穀倉工業風</title>
-<meta name='description' content=""/>
+<title>現代北歐風∣JH正豪手工房間門/推拉門</title>
+<meta name='description' content="北歐無造作的現代質感木門，搭配自然原木色木質地板，讓忙碌一整天的您，回到家享受溫馨舒適的現代家居空間。歡迎立即參觀選購!"/>
 <meta name='keywords' content=""/>
 <meta name="MobileOptimized" content="width">
 <meta name="HandheldFriendly" content="true">
@@ -94,7 +94,7 @@ $(document).ready(function() {
                         <h5 class="has_sub"><span>房間門/推拉門</span></h5>
                         <ul class="the_sub_menu" style="display: block;">
                             <li><p><a href="product-01.html">細緻沉穩風</a></p></li>
-                            <li><p><a href="product-02.html">恬靜鄉村風</a></p></li>
+                            <li><p><a href="product-02.html">田園鄉村風</a></p></li>
                             <li><p><a href="product-03.html">雋永經典風</a></p></li>
                             <li><p><a href="product-04.html">英式田園風</a></p></li>
                             <li><p><a href="product-05.html">匠心懷舊風</a></p></li>
@@ -133,7 +133,7 @@ $(document).ready(function() {
             <li>
                 <a class="popup-link" href="#popup-product-4">
                     <img src="images/product/p08/4-R26-04.jpg" alt="R25-04-粗獷棕色">
-                    <p class="info">R25-04-粗獷棕色</p>
+                    <p class="info">R26-04-粗獷棕色</p>
                 </a>
             </li>
 
@@ -146,7 +146,7 @@ $(document).ready(function() {
             <li>
                 <a class="popup-link" href="#popup-product-6">
                     <img src="images/product/p08/6-R28-03.jpg" alt="R25-03-粗獷原木色">
-                    <p class="info">R25-03-粗獷原木色</p>
+                    <p class="info">R28-03-粗獷原木色</p>
                 </a>
             </li>
             <li>
@@ -171,24 +171,24 @@ $(document).ready(function() {
             </div>
             <ul class="clearfix">
                 <li>
-                    <div class="top_icon icon_01">
+                    <a class="top_icon icon_01" href="about.html#goabout_01">
                         <p>獨門工法</p>
-                    </div>
+                    </a>
                 </li>
                 <li>
-                    <div class="top_icon icon_02">
+                    <a class="top_icon icon_02" href="order.html">
                         <p>訂購流程</p>
-                    </div>
+                    </a>
                 </li>
                 <li>
-                    <div class="top_icon icon_03">
+                    <a class="top_icon icon_03" href="faq.html">
                         <p>保養常識</p>
-                    </div>
+                    </a>
                 </li>
                 <li>
-                    <div class="top_icon icon_04">
+                    <a class="top_icon icon_04" href="about.html#goabout_02">
                         <p>檢驗合格</p>
-                    </div>
+                    </a>
                 </li>
             </ul>
         </div>
@@ -196,27 +196,24 @@ $(document).ready(function() {
 </main>
 
 <footer class="FooterBox">
-    <div class="ContentsBox">
+    <section class="ContentsBox">
         <ul class="info clearfix">
             <li class="icon_01">
                 <p>_連絡電話_<br><span>(03)9906828</span></p>
             </li>
             <li class="icon_02">
-                <p><a href="#" target="_blank">_臉書專頁_<br><span>JENG HAUR</span>正豪木業</a></p>
+                <a href="https://www.facebook.com/pages/category/Community/%E6%AD%A3%E8%B1%AA%E6%9C%A8%E6%A5%AD%E8%82%A1%E4%BB%BD%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8-209694019094602/" target="_blank"><p>_臉書專頁_<br><span>JENG HAUR</span>正豪木業</p></a>
             </li>
             <li class="icon_03">
-                <p>_公司地址_<br>宜蘭縣冬山鄉德興四路<span>16</span>號</p>
+                 <a href="https://goo.gl/maps/EWWfJ6YaxKq" target="_blank"><p>_公司地址_<br>宜蘭縣冬山鄉德興四路<span>16</span>號</p></a>
             </li>
             <li class="icon_04">
-                <p>_電子郵件_<br><a href="mailto:jeng9906828@gmail.com"><span>jeng9906828@gmail.com</span></a></p>
+                <a href="mailto:jeng9906828@gmail.com"><p>_電子郵件_<br><span>jeng9906828@gmail.com</span></p></a>
             </li>
         </ul>
-        <p class="copyright">Copyright © 2019 Jeng Haur Timber Corporation. All right reserved</p>
-    </div>
-    <section class="gotop">
-        <p><a class="go00">TOP</a></p>
     </section>
 </footer>
+<p class="go-top" id="TOP" title="回到上面"><a>TOP</a></p>
 
     <!-- popup product-info - 1 -->
     <div id="popup-product-1" class="white-popup popup-L mfp-hide">
@@ -266,8 +263,8 @@ $(document).ready(function() {
             <div class="the_deta">
                 <h3 class="top_title">品名:實木房間門/穀倉工業風</h3>
                 <p class="p_center">
-                    型號：R25-13-粗獷深柚色<br>
-                    樹種：歐洲雲杉<br>
+                    型號：R25-04-粗獷綠色<br>
+                    樹種：北美紅橡木(RED OAK)<br>
                     厚度：33mm/36mm/40mm/45mm<br>
                     工法：複合實木工法<br>
                 </p>
@@ -305,7 +302,7 @@ $(document).ready(function() {
                 <h3 class="top_title">品名:實木房間門/穀倉工業風</h3>
                 <p class="p_center">
                     型號：R26-04-粗獷藍色<br>
-                    樹種：歐洲雲杉<br>
+                    樹種：北美紅橡木(RED OAK)<br>
                     厚度：33mm/36mm/40mm/45mm<br>
                     工法：複合實木工法<br>
                 </p>
@@ -343,7 +340,7 @@ $(document).ready(function() {
                 <h3 class="top_title">品名:實木房間門/穀倉工業風</h3>
                 <p class="p_center">
                     型號：R26-04-粗獷棕色<br>
-                    樹種：歐洲雲杉<br>
+                    樹種：北美紅橡木(RED OAK)<br>
                     厚度：33mm/36mm/40mm/45mm<br>
                     工法：複合實木工法<br>
                 </p>
