--- a/JH/index.html
+++ b/JH/index.html
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="zh-TW">
 <head>
 <meta charset="UTF-8">
-<title>正豪木業</title>
-<meta name='description' content=""/>
+<title>JH正豪手工房間門∣不只追求「質感」更要做「耐用」的木門</title>
+<meta name='description' content="提供您房間門客製化服務，包含尺寸訂製及各式風格選擇，如經典白色房門、灰色極簡風、粉藍色鄉村風、綠色仿古風等樣式。打造專屬您的手工好門，歡迎立即參觀選購!"/>
 <meta name='keywords' content=""/>
 <meta name="MobileOptimized" content="width">
 <meta name="HandheldFriendly" content="true">
@@ -111,25 +111,33 @@
         <div class="ContentsBox world_map">
             <ul class="service_list clearfix">
                 <li>
-                    <img src="images/service_list_img_01.png">
-                    <h4>選材來源</h4>
+                    <a href="about.html#goabout_04">
+                        <img src="images/service_list_img_01.png">
+                        <h4>選材來源</h4>
+                    </a>
                 </li>
                 <li>
-                    <img src="images/service_list_img_02.png">
-                    <h4>原料把關</h4>
+                    <a href="about.html#goabout_02">
+                        <img src="images/service_list_img_02.png">
+                        <h4>原料把關</h4>
+                    </a>
                 </li>
                 <li>
-                    <img src="images/service_list_img_03.png">
-                    <h4>特色漆面</h4>
+                    <a href="about.html#goabout_03">
+                        <img src="images/service_list_img_03.png">
+                        <h4>特色漆面</h4>
+                    </a>
                 </li>
                 <li>
-                    <img src="images/service_list_img_04.png">
-                    <h4>獨門工法</h4>
+                    <a href="about.html#goabout_01">
+                        <img src="images/service_list_img_04.png">
+                        <h4>獨門工法</h4>
+                    </a>
                 </li>
             </ul>
             <h4>以嚴謹的品質控管與專業技術構築您的居家「好門」</h4>
             <p class="year">正豪木業自1993年成立迄今，以品質、創新、客戶為先的經營信念，努力耕耘實木門領域，擁有超過40年經歷的資深師傅做專業製造與嚴謹監督，多年來深獲國內外客戶的高度肯定。</p>
-            <p class="more"><a href="#">更多資訊</a></p>
+            <p class="more"><a href="about.html">更多資訊</a></p>
         </div>
     </section>
     <section class="newsBox">
@@ -139,26 +147,26 @@
         <div class="ContentsBox">
             <ul class="news_list clearfix">
                 <li><a href="news-01.html">
-                    <div class="top_img"><img src="images/bg_news_01.png" width="100%"></div>
+                    <div class="top_img"><img src="images/news/article_img_01.png" width="100%"></div>
                     <div class="newBox">
                         <div class="info clearfix">
                             <p class="day"><span>2018</span>AUG_16</p>
                             <p class="tag">官方公告</p>
                             <p class="more_details">詳細內容 >></p>
                         </div>
-                        <p class="ex">複合實木房間門_經濟實惠的創新選擇。</p>
+                        <p class="ex">正豪木業榮獲2018MIT台灣金選獎的肯定</p>
                     </div>
                     </a>
                 </li>
                 <li><a href="news-02.html">
-                    <div class="top_img"><img src="images/bg_news_02.png" width="100%"></div>
+                    <div class="top_img"><img src="images/news/article_img_03.png" width="100%"></div>
                     <div class="newBox">
                         <div class="info clearfix">
                             <p class="day"><span>2018</span>OCT_31</p>
                             <p class="tag">官方公告</p>
                             <p class="more_details">詳細內容 >></p>
                         </div>
-                        <p class="ex">工業風實木門板_率性大器的風格呈現。</p>
+                        <p class="ex">複合實木門板_經濟實惠的創新選擇</p>
                     </div>
                     </a>
                 </li>
@@ -170,34 +178,31 @@
             <h3>風格選品 / <span>LIFE STYLE</span></h3>
         </div>
         <ul class="style_list clearfix">
-            <li class="style_01"><a href="#"></a></li>
-            <li class="style_02"><a href="#"></a></li>
+            <li class="style_01"><a href="life_style.html"></a></li>
+            <li class="style_02"><a href="life_style.html"></a></li>
         </ul>
     </section>
 </main>
 
 <footer class="FooterBox">
-    <div class="ContentsBox">
+    <section class="ContentsBox">
         <ul class="info clearfix">
             <li class="icon_01">
                 <p>_連絡電話_<br><span>(03)9906828</span></p>
             </li>
             <li class="icon_02">
-                <p><a href="#" target="_blank">_臉書專頁_<br><span>JENG HAUR</span>正豪木業</a></p>
+                <a href="https://www.facebook.com/pages/category/Community/%E6%AD%A3%E8%B1%AA%E6%9C%A8%E6%A5%AD%E8%82%A1%E4%BB%BD%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8-209694019094602/" target="_blank"><p>_臉書專頁_<br><span>JENG HAUR</span>正豪木業</p></a>
             </li>
             <li class="icon_03">
-                <p>_公司地址_<br>宜蘭縣冬山鄉德興四路<span>16</span>號</p>
+                 <a href="https://goo.gl/maps/EWWfJ6YaxKq" target="_blank"><p>_公司地址_<br>宜蘭縣冬山鄉德興四路<span>16</span>號</p></a>
             </li>
             <li class="icon_04">
-                <p>_電子郵件_<br><a href="mailto:jeng9906828@gmail.com"><span>jeng9906828@gmail.com</span></a></p>
+                <a href="mailto:jeng9906828@gmail.com"><p>_電子郵件_<br><span>jeng9906828@gmail.com</span></p></a>
             </li>
         </ul>
-        <p class="copyright">Copyright © 2019 Jeng Haur Timber Corporation. All right reserved</p>
-    </div>
-    <section class="gotop">
-        <p><a class="go00">TOP</a></p>
     </section>
 </footer>
+<p class="go-top" id="TOP" title="回到上面"><a>TOP</a></p>
 
 </body>
 </html>
