--- a/JH/news-01.html
+++ b/JH/news-01.html
@@ -104,27 +104,24 @@
 </main>
 
 <footer class="FooterBox">
-    <div class="ContentsBox">
+    <section class="ContentsBox">
         <ul class="info clearfix">
             <li class="icon_01">
                 <p>_連絡電話_<br><span>(03)9906828</span></p>
             </li>
             <li class="icon_02">
-                <p><a href="#" target="_blank">_臉書專頁_<br><span>JENG HAUR</span>正豪木業</a></p>
+                <a href="https://www.facebook.com/pages/category/Community/%E6%AD%A3%E8%B1%AA%E6%9C%A8%E6%A5%AD%E8%82%A1%E4%BB%BD%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8-209694019094602/" target="_blank"><p>_臉書專頁_<br><span>JENG HAUR</span>正豪木業</p></a>
             </li>
             <li class="icon_03">
-                <p>_公司地址_<br>宜蘭縣冬山鄉德興四路<span>16</span>號</p>
+                 <a href="https://goo.gl/maps/EWWfJ6YaxKq" target="_blank"><p>_公司地址_<br>宜蘭縣冬山鄉德興四路<span>16</span>號</p></a>
             </li>
             <li class="icon_04">
-                <p>_電子郵件_<br><a href="mailto:jeng9906828@gmail.com"><span>jeng9906828@gmail.com</span></a></p>
+                <a href="mailto:jeng9906828@gmail.com"><p>_電子郵件_<br><span>jeng9906828@gmail.com</span></p></a>
             </li>
         </ul>
-        <p class="copyright">Copyright © 2019 Jeng Haur Timber Corporation. All right reserved</p>
-    </div>
-    <section class="gotop">
-        <p><a class="go00">TOP</a></p>
     </section>
 </footer>
+<p class="go-top" id="TOP" title="回到上面"><a>TOP</a></p>
 
 </body>
 </html>
