--- a/JH/product-02.html
+++ b/JH/product-02.html
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="zh-TW">
 <head>
 <meta charset="UTF-8">
-<title>正豪木業 - 產品介紹 - 恬靜鄉村風</title>
-<meta name='description' content=""/>
+<title>田園鄉村風∣JH正豪手工房間門/推拉門</title>
+<meta name='description' content="北美鄉村風最經典的山形木紋，搭配豐富而內斂的溫暖色系，讓您輕鬆打造自然質樸、不造作的美式鄉村實木房間門。歡迎立即參觀選購!"/>
 <meta name='keywords' content=""/>
 <meta name="MobileOptimized" content="width">
 <meta name="HandheldFriendly" content="true">
@@ -86,7 +86,7 @@ $(document).ready(function() {
         <div class="produc_left_menu">
             <div class="for_mob_box">
                 <h3 class="main_title">產品介紹 / <span>PRODUCT</span></h3>
-                <h4 class="sub_title">恬靜鄉村風</h4>
+                <h4 class="sub_title">田園鄉村風</h4>
                 <div class="box-none">
                 <p class="info">北美鄉村風最經典的山形木紋，搭配豐富而內斂的溫暖色系，讓您輕鬆打造自然質樸、不造作的美式鄉村風格。</p>
                 <ul class="menu_type">
@@ -94,7 +94,7 @@ $(document).ready(function() {
                         <h5 class="has_sub"><span>房間門/推拉門</span></h5>
                         <ul class="the_sub_menu" style="display: block;">
                             <li><p><a href="product-01.html">細緻沉穩風</a></p></li>
-                            <li><p><a class="btn_in" href="product-02.html">恬靜鄉村風</a></p></li>
+                            <li><p><a class="btn_in" href="product-02.html">田園鄉村風</a></p></li>
                             <li><p><a href="product-03.html">雋永經典風</a></p></li>
                             <li><p><a href="product-04.html">英式田園風</a></p></li>
                             <li><p><a href="product-05.html">匠心懷舊風</a></p></li>
@@ -196,24 +196,24 @@ $(document).ready(function() {
             </div>
             <ul class="clearfix">
                 <li>
-                    <div class="top_icon icon_01">
+                    <a class="top_icon icon_01" href="about.html#goabout_01">
                         <p>獨門工法</p>
-                    </div>
+                    </a>
                 </li>
                 <li>
-                    <div class="top_icon icon_02">
+                    <a class="top_icon icon_02" href="order.html">
                         <p>訂購流程</p>
-                    </div>
+                    </a>
                 </li>
                 <li>
-                    <div class="top_icon icon_03">
+                    <a class="top_icon icon_03" href="faq.html">
                         <p>保養常識</p>
-                    </div>
+                    </a>
                 </li>
                 <li>
-                    <div class="top_icon icon_04">
+                    <a class="top_icon icon_04" href="about.html#goabout_02">
                         <p>檢驗合格</p>
-                    </div>
+                    </a>
                 </li>
             </ul>
         </div>
@@ -221,27 +221,24 @@ $(document).ready(function() {
 </main>
 
 <footer class="FooterBox">
-    <div class="ContentsBox">
+    <section class="ContentsBox">
         <ul class="info clearfix">
             <li class="icon_01">
                 <p>_連絡電話_<br><span>(03)9906828</span></p>
             </li>
             <li class="icon_02">
-                <p><a href="#" target="_blank">_臉書專頁_<br><span>JENG HAUR</span>正豪木業</a></p>
+                <a href="https://www.facebook.com/pages/category/Community/%E6%AD%A3%E8%B1%AA%E6%9C%A8%E6%A5%AD%E8%82%A1%E4%BB%BD%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8-209694019094602/" target="_blank"><p>_臉書專頁_<br><span>JENG HAUR</span>正豪木業</p></a>
             </li>
             <li class="icon_03">
-                <p>_公司地址_<br>宜蘭縣冬山鄉德興四路<span>16</span>號</p>
+                 <a href="https://goo.gl/maps/EWWfJ6YaxKq" target="_blank"><p>_公司地址_<br>宜蘭縣冬山鄉德興四路<span>16</span>號</p></a>
             </li>
             <li class="icon_04">
-                <p>_電子郵件_<br><a href="mailto:jeng9906828@gmail.com"><span>jeng9906828@gmail.com</span></a></p>
+                <a href="mailto:jeng9906828@gmail.com"><p>_電子郵件_<br><span>jeng9906828@gmail.com</span></p></a>
             </li>
         </ul>
-        <p class="copyright">Copyright © 2019 Jeng Haur Timber Corporation. All right reserved</p>
-    </div>
-    <section class="gotop">
-        <p><a class="go00">TOP</a></p>
     </section>
 </footer>
+<p class="go-top" id="TOP" title="回到上面"><a>TOP</a></p>
 
     <!-- popup product-info - 1 -->
     <div id="popup-product-1" class="white-popup popup-L mfp-hide">
@@ -366,7 +363,7 @@ $(document).ready(function() {
             <div class="the_deta">
                 <h3 class="top_title">品名:實木房間門/田園鄉村風</h3>
                 <p class="p_center">
-                    型號：R07-01-刷紋牙白色<br>
+                    型號：R03-01-刷紋牙白色<br>
                     樹種：北美白栓木(梣木)(ASH)<br>
                     厚度：33mm/36mm/40mm/45mm<br>
                     工法：複合實木工法<br>
