--- a/JH/product-04.html
+++ b/JH/product-04.html
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="zh-TW">
 <head>
 <meta charset="UTF-8">
-<title>正豪木業 - 產品介紹 - 英式田園風</title>
-<meta name='description' content=""/>
+<title>英式田園風∣JH正豪手工房間門/推拉門</title>
+<meta name='description' content="在清新色彩下微透出細緻典雅的天然木紋，搭配英式鄉村風經典的小碎花布料及壁紙點綴，讓清新的田園鄉村風木門溫暖您的家。歡迎立即參觀選購!"/>
 <meta name='keywords' content=""/>
 <meta name="MobileOptimized" content="width">
 <meta name="HandheldFriendly" content="true">
@@ -94,7 +94,7 @@ $(document).ready(function() {
                         <h5 class="has_sub"><span>房間門/推拉門</span></h5>
                         <ul class="the_sub_menu" style="display: block;">
                             <li><p><a href="product-01.html">細緻沉穩風</a></p></li>
-                            <li><p><a href="product-02.html">恬靜鄉村風</a></p></li>
+                            <li><p><a href="product-02.html">田園鄉村風</a></p></li>
                             <li><p><a href="product-03.html">雋永經典風</a></p></li>
                             <li><p><a class="btn_in" href="product-04.html">英式田園風</a></p></li>
                             <li><p><a href="product-05.html">匠心懷舊風</a></p></li>
@@ -190,24 +190,24 @@ $(document).ready(function() {
             </div>
             <ul class="clearfix">
                 <li>
-                    <div class="top_icon icon_01">
+                    <a class="top_icon icon_01" href="about.html#goabout_01">
                         <p>獨門工法</p>
-                    </div>
+                    </a>
                 </li>
                 <li>
-                    <div class="top_icon icon_02">
+                    <a class="top_icon icon_02" href="order.html">
                         <p>訂購流程</p>
-                    </div>
+                    </a>
                 </li>
                 <li>
-                    <div class="top_icon icon_03">
+                    <a class="top_icon icon_03" href="faq.html">
                         <p>保養常識</p>
-                    </div>
+                    </a>
                 </li>
                 <li>
-                    <div class="top_icon icon_04">
+                    <a class="top_icon icon_04" href="about.html#goabout_02">
                         <p>檢驗合格</p>
-                    </div>
+                    </a>
                 </li>
             </ul>
         </div>
@@ -215,27 +215,24 @@ $(document).ready(function() {
 </main>
 
 <footer class="FooterBox">
-    <div class="ContentsBox">
+    <section class="ContentsBox">
         <ul class="info clearfix">
             <li class="icon_01">
                 <p>_連絡電話_<br><span>(03)9906828</span></p>
             </li>
             <li class="icon_02">
-                <p><a href="#" target="_blank">_臉書專頁_<br><span>JENG HAUR</span>正豪木業</a></p>
+                <a href="https://www.facebook.com/pages/category/Community/%E6%AD%A3%E8%B1%AA%E6%9C%A8%E6%A5%AD%E8%82%A1%E4%BB%BD%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8-209694019094602/" target="_blank"><p>_臉書專頁_<br><span>JENG HAUR</span>正豪木業</p></a>
             </li>
             <li class="icon_03">
-                <p>_公司地址_<br>宜蘭縣冬山鄉德興四路<span>16</span>號</p>
+                 <a href="https://goo.gl/maps/EWWfJ6YaxKq" target="_blank"><p>_公司地址_<br>宜蘭縣冬山鄉德興四路<span>16</span>號</p></a>
             </li>
             <li class="icon_04">
-                <p>_電子郵件_<br><a href="mailto:jeng9906828@gmail.com"><span>jeng9906828@gmail.com</span></a></p>
+                <a href="mailto:jeng9906828@gmail.com"><p>_電子郵件_<br><span>jeng9906828@gmail.com</span></p></a>
             </li>
         </ul>
-        <p class="copyright">Copyright © 2019 Jeng Haur Timber Corporation. All right reserved</p>
-    </div>
-    <section class="gotop">
-        <p><a class="go00">TOP</a></p>
     </section>
 </footer>
+<p class="go-top" id="TOP" title="回到上面"><a>TOP</a></p>
 
     <!-- popup product-info - 1 -->
     <div id="popup-product-1" class="white-popup popup-L mfp-hide">
@@ -358,7 +355,7 @@ $(document).ready(function() {
                 <img src="images/product/p04/4-R30-07.jpg" alt="R30-07-暖黃色">
             </div>
             <div class="the_deta">
-                <h3 class="top_title">品名:實木房間門/田園鄉村風</h3>
+                <h3 class="top_title">品名:實木房間門/英式田園風</h3>
                 <p class="p_center">
                     型號：R30-07-暖黃色<br>
                     樹種：北美楓木(MAPLE)<br>
@@ -367,7 +364,7 @@ $(document).ready(function() {
                 </p>
                 <h3 class="top_title">門板特色：</h3>
                 <p>
-                    ◆ 選用北美鄉村風最經典的山形木紋，搭配豐富而內斂的溫暖色系，讓您輕鬆打造講求自然質樸、不造作的美式鄉村風格<br>
+                    ◆ 在清新色彩下微透出細緻典雅的天然木紋，搭配英式鄉村風經典的小碎花布料及壁紙點綴，讓清新的田園鄉村風溫暖您的家<br>
                     ◆ 門板尺寸全採客製化服務<br>
                     ◆ 100% 台灣純手工製造，絕非假他人代工，品質由我們嚴格控管<br>
                     ◆ 經數道手工研磨讓木門邊角圓潤不傷手<br>
