--- a/JH/about.html
+++ b/JH/about.html
@@ -71,8 +71,7 @@
 <main class="main_contents inside_contents">
     <div class="bannerBox banner_01"></div>
     <section class="s_sideMenu">
-        <h3 class="title">關於我們 /<br>
-        <span>ABOUT US</span></h3>
+        <h3 class="title">關於我們 /<span>ABOUT US</span></h3>
         <ul class="golink_list">
             <li><p><a class="inside_go01">公司簡介</a></p></li>
             <li><p><a class="inside_go02">核心能力</a></p></li>
@@ -275,6 +274,7 @@
             </li>
         </ul>
     </section>
+    <p class="copyright">Copyright © 2019 Jeng Haur Timber Corporation. All right reserved</p>
 </footer>
 <p class="go-top" id="TOP" title="回到上面"><a>TOP</a></p>
 
