--- a/JH/product-doorframe.html
+++ b/JH/product-doorframe.html
@@ -92,7 +92,7 @@ $(document).ready(function() {
                 <ul class="menu_type">
                     <li class="type_title">
                         <h5 class="has_sub"><span>房間門/推拉門</span></h5>
-                        <ul class="the_sub_menu">
+                        <ul class="the_sub_menu clearfix">
                             <li><p><a href="product-01.html">細緻沉穩風</a></p></li>
                             <li><p><a href="product-02.html">恬靜鄉村風</a></p></li>
                             <li><p><a href="product-03.html">雋永經典風</a></p></li>
@@ -187,6 +187,7 @@ $(document).ready(function() {
             </li>
         </ul>
     </section>
+    <p class="copyright">Copyright © 2019 Jeng Haur Timber Corporation. All right reserved</p>
 </footer>
 <p class="go-top" id="TOP" title="回到上面"><a>TOP</a></p>
 
