--- a/JH/product-06.html
+++ b/JH/product-06.html
@@ -92,7 +92,7 @@ $(document).ready(function() {
                 <ul class="menu_type">
                     <li class="type_title">
                         <h5 class="has_sub"><span>房間門/推拉門</span></h5>
-                        <ul class="the_sub_menu" style="display: block;">
+                        <ul class="the_sub_menu clearfix" style="display: block;">
                             <li><p><a href="product-01.html">細緻沉穩風</a></p></li>
                             <li><p><a href="product-02.html">田園鄉村風</a></p></li>
                             <li><p><a href="product-03.html">雋永經典風</a></p></li>
@@ -211,6 +211,7 @@ $(document).ready(function() {
             </li>
         </ul>
     </section>
+    <p class="copyright">Copyright © 2019 Jeng Haur Timber Corporation. All right reserved</p>
 </footer>
 <p class="go-top" id="TOP" title="回到上面"><a>TOP</a></p>
 
